tester/testsuite/bad/bad005.jl
foo() {}

int main() {
    return 1;
}
